# weather-fetch

./: README.md  example_config.json  meson.build  open-weather-fetch.service  openweather.py  weather.py  weather.service
fetchers/openweathermap/: __init__.py
